<resources>
    <string name="app_name">당근마켓c</string>
    <string name="home">홈</string>
    <string name="neighborhood">내 근처</string>
    <string name="neighborhoodLife">동네 생활</string>
    <string name="chatting">채팅</string>
    <string name="mycarrot">나의 당근</string>
    <string name="logout">로그아웃</string>
    <string name="mannerTemp"><u>매너온도</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">Hello blank fragment2222</string>
    <string name="my_village">%1$s님\n%2$s근처 %3$s\n찾고 계신가요?</string>
    <string name="looking_for_store">내 근처에서 주변 가게를 찾아보세요</string>
    <string name="what_about_myvillage">우리동네 이건 어떠세요?</string>
    <string name="recommand_store_by_neighbor">이웃들이 추천한 가게를 확인해보세요</string>
    <string name="review_interest">후기 %1$d 관심 %2$d</string>
    <string name="review">%1$s님 %2$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="check_in_current_position">현재 위치가 내 동네로 설정한 \'%1$s\' 내에 있어요.</string>
    <string name="setting_do_not_disturb_time">%1$s:%2$s %3$s ~ %4$s:%5$s %6$s</string>
    <string name="dialog_text_cache">임시 저장된 캐시 파일을 삭제하고 디스크 용량을 확보합니다. 진행하시겠습니까?</string>
    <string name="dialog_text_logout_content">로그아웃 하시겠습니까?</string>
    <string name="keyword_layout_content">키워드를 등록해 두면, 해당 키워드와 관련된 판매글이\n올라올때 푸시 알림을 받을 수 있어요.</string>
    <string name="keyword_faq"><u>혹시 키워드 알림이 오지 않나요?</u></string>
    <string name="keyword_count">키워드 등록 (%1$d/30)</string>
    <string name="manner_temp_content">매너온도는 당근마켓c\n사용자로부터받은 칭찬,\n후기, 비매너평가, 운영자\n징계등을 종합해서 만든\n매너 지표입니다.</string>
    <string name="manner_temp_display">36.5 \u2103</string>
    <string name="manner_temp_first">첫 온도 36.5 \u2103</string>
    <string name="title_activity_detailed_selling_item">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="region_name_count_text">%1$s과 근처 동네 %2$d개</string>
    <string name="region_count_text">근처 동네 %1$d개</string>
    <string name="title">제목</string>
    <string name="category">카테고리</string>
    <string name="used_content_hint"> %1$s에 올릴 게시글 내용을 작성해주세요. 가품 및 판매금지품목은 게시가 제한될 수 있어요.</string>
    <string name="submit">완료</string>
    <string name="choice_subject">게시글의 주제를 선택해 주세요</string>
    <string name="neighborlife_content_hint">%1$s 근처 이웃과 우리 동네 관련된 질문이나 이야기를 해보세요.</string>
    <string name="hasnot_select_images">이미지를 선택하지 않으셨습니다.</string>
    <string name="price">가격 (선택사항)</string>
    <string name="offer_price">가격제안 받기</string>
    <string name="won_currency">₩</string>
    <string name="choose_images">업로드할 사진 선택</string>
    <string name="refresh">새로고침</string>
    <string name="report">신고하기</string>
    <string name="restrict_user_article">이 사용자의 글 보지 않기</string>
    <string name="share_article">공유하기</string>
    <string name="price_with_currency">%1$s원</string>

    <string-array name="category_list">
        <item>디지털/가전</item>
        <item>가구/인테리어</item>
        <item>유아동/유아도서</item>
        <item>생활/가공식품</item>
        <item>스포츠/레저</item>
        <item>여성잡화</item>
        <item>여성의류</item>
        <item>남성패션/잡화</item>
        <item>게임/취미</item>
        <item>뷰티/미용</item>
        <item>반려동물용품</item>
        <item>도서/티켓/음반</item>
        <item>기타 중고용품</item>
        <item>삽니다</item>
    </string-array>

</resources>
