<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_used_item_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share_article" />
    <item
        android:id="@+id/menu_refresh_article"
        app:showAsAction="collapseActionView"
        android:title="@string/refresh" />
    <item
        android:id="@+id/menu_report_article"
        app:showAsAction="collapseActionView"
        android:title="@string/report" />
    <item
        android:id="@+id/menu_do_not_display_user"
        app:showAsAction="collapseActionView"
        android:title="@string/restrict_user_article" />
</menu>