<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/navigation_neighborhoodLife"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/neighborhoodLife"
        android:icon="@drawable/ic_brush_black_24dp"/>

    <item
        android:id="@+id/navigation_neighborhoohood"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/neighborhood"
        android:icon="@drawable/ic_pin_drop_black_24dp"/>

    <item
        android:id="@+id/navigation_chatting"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/chatting"
        android:icon="@drawable/ic_chat_black_24dp"/>

    <item
        android:id="@+id/navigation_mycarrot"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/mycarrot"
        android:icon="@drawable/ic_portrait_black_24dp"/>

</menu>