<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp">

    <include
        android:id="@+id/write_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upload_img_constrant"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_border_1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/write_toolbar">

        <ImageView
            android:id="@+id/camera_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:layout_constraintStart_toStartOf="@id/upload_img_constrant"
            app:layout_constraintEnd_toEndOf="@id/upload_img_constrant"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/image_count"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/image_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/10"
            app:layout_constraintTop_toBottomOf="@id/camera_image"
            app:layout_constraintStart_toStartOf="@id/upload_img_constrant"
            app:layout_constraintEnd_toEndOf="@id/upload_img_constrant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photo_recycler_view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/upload_img_constrant"
        app:layout_constraintTop_toTopOf="@id/upload_img_constrant"
        app:layout_constraintBottom_toBottomOf="@id/upload_img_constrant"/>

    <View
        android:id="@+id/divider_title"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:alpha="0.5"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@id/upload_img_constrant" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        android:hint="@string/title"
        android:background="@null"
        android:textColorHint="@color/colorGray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/divider_title" />

    <View
        android:id="@+id/divider_category"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:alpha="0.5"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/category_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_category"/>

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/category_textview"
        app:layout_constraintBottom_toBottomOf="@id/category_textview"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider_price"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:alpha="0.5"
        android:background="@color/colorGray"
        app:layout_constraintTop_toBottomOf="@id/category_textview"/>

    <TextView
        android:id="@+id/currency_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="W"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/price_edittext"
        app:layout_constraintBottom_toBottomOf="@id/price_edittext"/>

    <EditText
        android:id="@+id/price_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="가격 (선택사항)"
        android:background="@null"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorGray"
        android:layout_marginTop="15dp"
        android:layout_marginStart="2dp"
        app:layout_constraintLeft_toRightOf="@id/currency_display"
        app:layout_constraintTop_toBottomOf="@id/divider_price" />

    <CheckBox
        android:id="@+id/get_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/selector_offer"
        android:text="가격제안 받기"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/price_edittext"
        app:layout_constraintBottom_toBottomOf="@id/price_edittext"/>

    <View
        android:id="@+id/divider_content"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorGray"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/price_edittext"/>

    <EditText
        android:id="@+id/article_content_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@null"
        android:gravity="left|top"
        android:layout_marginTop="15dp"
        android:hint="@string/used_content_hint"
        app:layout_constraintTop_toBottomOf="@id/divider_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>